# ums

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _astylerc
include/ums/: core.h
include/ums/core/: builder.h  device.h  error.h  generator.h  list.h  logger.h  object.h  property.h  signals.h  simulator.h  types.h  value.h
src/core/: CMakeLists.txt  builder.c  core.c  device.c  error.c  generator.c  init.h  list.c  logger.c  object.c  property.c  signals.c  signals_alias.c  signals_receiver.c  signals_sender.c  simulator.c  value.c
src/run/: CMakeLists.txt  main.c
